--- a/package/pubspec.yaml
+++ b/package/pubspec.yaml
@@ -1,10 +1,10 @@
 name: flutter_meedu_videoplayer
 description: A cross Platform video player that uses video_player for android and ios and web, media_kit for windows and linux and macos.
-version: 4.2.13
+version: 4.2.14
 homepage: "https://github.com/zezo357/flutter_meedu_videoplayer"
 environment:
-  sdk: ">=2.16.2 <4.0.0"
-  flutter: ">=2.5.0"
+  sdk: ">=3.0.0 <4.0.0"
+  flutter: ">=3.3.0"
 topics:
   - video-player
   - video
@@ -14,35 +14,29 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  video_player: ^2.6.0
-  volume_controller: ^2.0.3
+  video_player: ^2.6.1
+  volume_controller: ^2.0.7
   auto_orientation: ^2.3.1
-  screen_brightness: ^0.2.0
-  flutter_meedu: ^8.0.0+1
-  flutter_spinkit: ^5.1.0
-  meta: ^1.7.0
+  screen_brightness: ^0.2.2
+  flutter_meedu: ^8.3.1
+  flutter_spinkit: ^5.2.0
+  meta: ^1.9.1
   universal_platform: ^1.0.0+1
   fullscreen_window: ^1.0.4
   video_player_media_kit: ^0.0.16
   # video_player_media_kit:
   #   path: ../../video_player_media_kit
 
-
-  window_manager: ^0.3.2
-  # window_manager: 
+  window_manager: ^0.3.4
+  # window_manager:
   #   path: ../../window_manager
-  wakelock: ^0.6.1+2
-  shared_preferences: ^2.0.13
-  path_provider: ^2.0.6
- 
-
-
+  wakelock: ^0.6.2
+  shared_preferences: ^2.1.2
+  path_provider: ^2.0.15
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-
 
   flutter_lints: ^2.0.1
 
