--- a/package/pubspec.yaml
+++ b/package/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  video_player: ^2.7.0
+
   volume_controller: ^2.0.7
   auto_orientation: ^2.3.1
   screen_brightness: ^0.2.2
@@ -29,16 +29,16 @@ dependencies:
   # video_player_media_kit:
   #   path: ../video_player_media_kit-master
 
-  # # Enables support for higher number of concurrent instances. Optional.
-  media_kit_native_event_loop: ^1.0.6 # Support for higher number of concurrent instances & better performance.
-  media_kit_libs_macos_video: ^1.0.6 # macOS package for video native libraries.
-  media_kit_libs_windows_video: ^1.0.5 # Windows package for video native libraries.
-  media_kit_libs_linux: ^1.0.2 # GNU/Linux dependency package.
+  media_kit: ^1.1.3 # Primary package.
+  media_kit_video: ^1.1.3 # For video rendering.
+  media_kit_native_event_loop: ^1.0.7 # Support for higher number of concurrent instances & better performance.
+  media_kit_libs_android_video: ^1.3.1 # Android package for video native libraries.
+  media_kit_libs_ios_video: ^1.1.1 # iOS package for video native libraries.
+  media_kit_libs_macos_video: ^1.1.1 # macOS package for video native libraries.
+  media_kit_libs_windows_video: ^1.0.6 # Windows package for video native libraries.
+  media_kit_libs_linux: ^1.1.0
   video_player_platform_interface: ^6.2.0
   stream_transform: ^2.1.0
-  media_kit: ^1.1.0
-  # For video rendering.
-  media_kit_video: ^1.1.0
 
   window_manager: ^0.3.5
   # window_manager:
