--- a/package/pubspec.yaml
+++ b/package/pubspec.yaml
@@ -3,8 +3,7 @@ description: A cross Platform video player that uses video_player for android an
 version: 4.2.17
 homepage: "https://github.com/zezo357/flutter_meedu_videoplayer"
 environment:
-  sdk: ">=3.0.0 <4.0.0"
-  flutter: ">=3.3.0"
+  sdk: ">=3.1.0 <4.0.0"
 
 topics:
   - video-player
@@ -29,14 +28,14 @@ dependencies:
   # video_player_media_kit:
   #   path: ../video_player_media_kit-master
 
-  media_kit: ^1.1.3 # Primary package.
-  media_kit_video: ^1.1.3 # For video rendering.
+  media_kit: ^1.1.5 # Primary package.
+  media_kit_video: ^1.1.6 # For video rendering.
   media_kit_native_event_loop: ^1.0.7 # Support for higher number of concurrent instances & better performance.
-  media_kit_libs_android_video: ^1.3.1 # Android package for video native libraries.
-  media_kit_libs_ios_video: ^1.1.1 # iOS package for video native libraries.
-  media_kit_libs_macos_video: ^1.1.1 # macOS package for video native libraries.
-  media_kit_libs_windows_video: ^1.0.6 # Windows package for video native libraries.
-  media_kit_libs_linux: ^1.1.0
+  media_kit_libs_android_video: ^1.3.2 # Android package for video native libraries.
+  media_kit_libs_ios_video: ^1.1.3 # iOS package for video native libraries.
+  media_kit_libs_macos_video: ^1.1.3 # macOS package for video native libraries.
+  media_kit_libs_windows_video: ^1.0.7 # Windows package for video native libraries.
+  media_kit_libs_linux: ^1.1.1
   video_player_platform_interface: ^6.2.0
   stream_transform: ^2.1.0
 
@@ -46,7 +45,7 @@ dependencies:
   # wakelock: ^0.6.2
   wakelock_plus: ^1.1.1
   shared_preferences: ^2.2.0
-  path_provider: ^2.0.15
+  path_provider: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -85,21 +84,21 @@ flutter:
       #web:
       #pluginClass: FlutterMeeduVideoplayerWeb
       #fileName: flutter_meedu_videoplayer_web.dart
-  assets:
-    - assets/icons/fast-forward.png
-    - assets/icons/fullscreen.png
-    - assets/icons/minimize.png
-    - assets/icons/mute.png
-    - assets/icons/play.png
-    - assets/icons/pause.png
-    - assets/icons/repeat.png
-    - assets/icons/rewind.png
-    - assets/icons/sound.png
-    - assets/icons/picture-in-picture.png
-    - assets/icons/exit_picture-in-picture.png
-    - assets/icons/lock-screen.png
-    - assets/icons/exit_lock-screen.png
-    - assets/icons/fit.png
+  # assets:
+  #   - assets/icons/fast-forward.png
+  #   - assets/icons/fullscreen.png
+  #   - assets/icons/minimize.png
+  #   - assets/icons/mute.png
+  #   - assets/icons/play.png
+  #   - assets/icons/pause.png
+  #   - assets/icons/repeat.png
+  #   - assets/icons/rewind.png
+  #   - assets/icons/sound.png
+  #   - assets/icons/picture-in-picture.png
+  #   - assets/icons/exit_picture-in-picture.png
+  #   - assets/icons/lock-screen.png
+  #   - assets/icons/exit_lock-screen.png
+  #   - assets/icons/fit.png
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
